
schemadir = join_paths(get_option('datadir'), 'glib-2.0/schemas')
install_data([
  'org.github.FreaxMATE.Ojo.gschema.xml',
], install_dir: schemadir)

appdatadir = join_paths(get_option('datadir'), 'metainfo')
install_data([
  'org.github.FreaxMATE.Ojo.appdata.xml',
], install_dir: appdatadir)

desktopdir = join_paths(get_option('datadir'), 'applications')
install_data([
  'org.github.FreaxMATE.Ojo.desktop',
], install_dir: desktopdir)

svgicondir = join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
install_data([
  'org.github.FreaxMATE.Ojo.svg',
],  install_dir: svgicondir)

icondir = join_paths(get_option('datadir'), 'icons/hicolor/48x48/apps')
install_data([
  'org.github.FreaxMATE.Ojo.png',
],  install_dir: icondir)

gladedir = join_paths(get_option('datadir'), 'ojo/')
install_data([
  'org.github.FreaxMATE.Ojo.glade',
],  install_dir: gladedir)


